# 3cl

./: .editorconfig  .gitignore  3cl.1  CMakeLists.txt  Makefile  README  README.7  README.md  cccl.c  cccl.h  ccl.7  executor.c  main.c  parser.c  readfile.c  str.c  tokenizer.c
examples/: Makefile  cat.ccl  cnt.ccl  fac.ccl  fib.ccl  fib.ccl.test  gcd.ccl  mlc.ccl  num.ccl
examples/in/: cat  fib
include/: 3cl.h  cccl.h  instruction.h  instructions.h  main.h  operation.h  readchar.h  readfile.h  stack.h  types.h  utils.h  variable.h
include/platform/: getch.h
src/: 3cl.c  cccl.c  instruction.c  main.c  operation.c  readchar.c  readfile.c  stack.c  utils.c  variable.c
src/instruction/: add.c  assign.c  decrement.c  increment.c  invalid.c  nop.c  pushzero.c  reverse.c  subtract.c
src/platform/: getch.c
